week_02/challenge_02/sg.tf
resource "aws_security_group" "alchdli_odd_sg" {
  vpc_id      = aws_vpc.alchdli_odd_vpc.id
  name        = "T101 SG"
  description = "T101 Study SG"
}

resource "aws_security_group_rule" "alchdli_odd_sginbound" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.alchdli_odd_sg.id
}

resource "aws_security_group_rule" "alchdli_odd_sgoutbound" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.alchdli_odd_sg.id
}
